# whispers

./: .gitignore  .gitmodules  README.EN.md  README.JA.md  README.md  build.gradle  gradle.properties
,github/workflows/: android-build.yml
.github/workflows/: main.yml
app/: build.gradle
app/src/main/java/whispers/media/: RiffWaveHelper.kt
app/src/main/java/whispers/ui/main/: MainScreen.kt  MainScreenViewModel.kt  myRecord.kt
gradle/: libs.versions.toml
nativelib/: build.gradle
nativelib/src/main/java/com/whispercpp/whisper/: LibWhisper.kt  WhisperCpuConfig.kt
nativelib/src/main/jni/whisper/: CMakeLists.txt  jni.c
